fixed design on larger screens

--- a/index.html
+++ b/index.html
@@ -38,106 +38,108 @@
 
         <div class="container">
             <div class="header">Whack-A-Cat!</div>
-            <div class="playfield">
-                <div class="row row-1">
-                    <div class="tile">
-                        <div class="boop" data-position="1">+1</div>
-                        <img
-                            class="cat"
-                            src="./graphics/cat_export_2.svg"
-                            alt="cat"
-                            data-position="1"
-                        />
+            <div class="playfieldContainer">
+                <div class="playfield">
+                    <div class="row row-1">
+                        <div class="tile">
+                            <div class="boop" data-position="1">+1</div>
+                            <img
+                                class="cat"
+                                src="./graphics/cat_export_2.svg"
+                                alt="cat"
+                                data-position="1"
+                            />
+                        </div>
+                        <div class="tile">
+                            <div class="boop" data-position="2">+1</div>
+                            <img
+                                class="cat"
+                                src="./graphics/cat_export_2.svg"
+                                alt="cat"
+                                data-position="2"
+                            />
+                        </div>
+                        <div class="tile">
+                            <div class="boop" data-position="3">+1</div>
+                            <img
+                                class="cat"
+                                src="./graphics/cat_export_2.svg"
+                                alt="cat"
+                                data-position="3"
+                            />
+                        </div>
                     </div>
-                    <div class="tile">
-                        <div class="boop" data-position="2">+1</div>
-                        <img
-                            class="cat"
-                            src="./graphics/cat_export_2.svg"
-                            alt="cat"
-                            data-position="2"
-                        />
+                    <div class="row row-2">
+                        <div class="tile">
+                            <div class="boop" data-position="4">+1</div>
+                            <img
+                                class="cat"
+                                src="./graphics/cat_export_2.svg"
+                                alt="cat"
+                                data-position="4"
+                            />
+                        </div>
+                        <div class="tile">
+                            <div class="boop" data-position="5">+1</div>
+                            <img
+                                class="cat"
+                                src="./graphics/cat_export_2.svg"
+                                alt="cat"
+                                data-position="5"
+                            />
+                        </div>
+                        <div class="tile">
+                            <div class="boop" data-position="6">+1</div>
+                            <img
+                                class="cat"
+                                src="./graphics/cat_export_2.svg"
+                                alt="cat"
+                                data-position="6"
+                            />
+                        </div>
                     </div>
-                    <div class="tile">
-                        <div class="boop" data-position="3">+1</div>
-                        <img
-                            class="cat"
-                            src="./graphics/cat_export_2.svg"
-                            alt="cat"
-                            data-position="3"
-                        />
+                    <div class="row row-3">
+                        <div class="tile">
+                            <div class="boop" data-position="7">+1</div>
+                            <img
+                                class="cat"
+                                src="./graphics/cat_export_2.svg"
+                                alt="cat"
+                                data-position="7"
+                            />
+                        </div>
+                        <div class="tile">
+                            <div class="boop" data-position="8">+1</div>
+                            <img
+                                class="cat"
+                                src="./graphics/cat_export_2.svg"
+                                alt="cat"
+                                data-position="8"
+                            />
+                        </div>
+                        <div class="tile">
+                            <div class="boop" data-position="9">+1</div>
+                            <img
+                                class="cat"
+                                src="./graphics/cat_export_2.svg"
+                                alt="cat"
+                                data-position="9"
+                            />
+                        </div>
                     </div>
                 </div>
-                <div class="row row-2">
-                    <div class="tile">
-                        <div class="boop" data-position="4">+1</div>
-                        <img
-                            class="cat"
-                            src="./graphics/cat_export_2.svg"
-                            alt="cat"
-                            data-position="4"
-                        />
+                <div class="output">
+                    <div class="highScore">
+                        <span>High Score: </span
+                        ><span class="highScoreText">0</span>
                     </div>
-                    <div class="tile">
-                        <div class="boop" data-position="5">+1</div>
-                        <img
-                            class="cat"
-                            src="./graphics/cat_export_2.svg"
-                            alt="cat"
-                            data-position="5"
-                        />
+                    <div class="score">
+                        <span>Score:</span><span class="scoreText">0</span>
                     </div>
-                    <div class="tile">
-                        <div class="boop" data-position="6">+1</div>
-                        <img
-                            class="cat"
-                            src="./graphics/cat_export_2.svg"
-                            alt="cat"
-                            data-position="6"
-                        />
+                    <div class="classtime">
+                        <span>Remaining Time:</span>
+                        <span class="remaingTimeText">30s</span>
                     </div>
-                </div>
-                <div class="row row-3">
-                    <div class="tile">
-                        <div class="boop" data-position="7">+1</div>
-                        <img
-                            class="cat"
-                            src="./graphics/cat_export_2.svg"
-                            alt="cat"
-                            data-position="7"
-                        />
-                    </div>
-                    <div class="tile">
-                        <div class="boop" data-position="8">+1</div>
-                        <img
-                            class="cat"
-                            src="./graphics/cat_export_2.svg"
-                            alt="cat"
-                            data-position="8"
-                        />
-                    </div>
-                    <div class="tile">
-                        <div class="boop" data-position="9">+1</div>
-                        <img
-                            class="cat"
-                            src="./graphics/cat_export_2.svg"
-                            alt="cat"
-                            data-position="9"
-                        />
-                    </div>
-                </div>
-            </div>
-            <div class="output">
-                <div class="highScore">
-                    <span>High Score: </span
-                    ><span class="highScoreText">0</span>
-                </div>
-                <div class="score">
-                    <span>Score:</span><span class="scoreText">0</span>
-                </div>
-                <div class="classtime">
-                    <span>Remaining Time:</span>
-                    <span class="remaingTimeText">30s</span>
                 </div>
             </div>
         </div>
