add sound when clicking cat

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="title">Whack-A-Cat!</div>
             <button class="playButton inverted">Play Game</button>
             <button class="playHardButton inverted">Play Game - Extreme</button>
+            <button class="toggleSoundButton inverted">Sound: On</button>
         </div>
 
         <div class="overlayScreen endScreen">
